<resources>
    <string name="app_name">ALC4.0:AndroidChallenge1</string>
    <string name="button_one">About ALC</string>
    <string name="button_two">My Profile</string>
    <string name="about_alc">Welcome to ALC 4.0</string>
    <string name="contentdescription_alclogo">ALC LOGO</string>
    <string name="string_nametext">Samuel Rungene</string>
    <string name="string_track">Track:</string>
    <string name="string_profile">Profile Picture</string>
    <string name="string_profilename">Samuel Rungene</string>
    <string name="string_android">Android</string>
    <string name="string_country">Country:</string>
    <string name="string_kenya">Kenya</string>
    <string name="string_email">Email:</string>
    <string name="string_samemail">rungeneclevers@gmail.com</string>
    <string name="string_phonenumber">PhoneNumber:</string>
    <string name="string_samphonenumber">+254728025144</string>
    <string name="string_slackusername">Slack Username:</string>
    <string name="string_samslackusername">\@rungene</string>
</resources>
