<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MY_PROFILE" android:id="@+id/sam_profile">


        <TextView
                android:text="@string/string_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/track_textview2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_textview" android:layout_marginTop="40dp"
                android:textSize="18sp"/>
        <ImageView
                android:layout_width="183dp"
                android:layout_height="188dp"
                app:srcCompat="@drawable/sam_profile"
                android:id="@+id/imageview_sam" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/string_profile"/>
        <TextView
                android:text="@string/string_profilename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_textview" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageview_sam"
                android:textStyle="bold" android:textSize="24sp"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="309dp"
                android:id="@+id/guideline_profile"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="411dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="309dp" tools:visibility="visible"/>
        <TextView
                android:text="@string/string_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/country_textview" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_textview" android:layout_marginTop="92dp"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/string_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_textview" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_textview" android:layout_marginTop="144dp"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/string_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phonenumber_textview" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_textview" android:layout_marginTop="204dp"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/string_slackusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slackusername_textview" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_textview" android:layout_marginTop="268dp"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/string_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/country_textview" android:layout_marginStart="16dp"
                android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="@+id/guideline_profile"/>
        <TextView
                android:text="@string/string_kenya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kenya_textview"
                app:layout_constraintStart_toEndOf="@+id/country_textview" android:layout_marginStart="16dp"
                android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="@+id/guideline_profile"/>
        <TextView
                android:text="@string/string_samphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:id="@+id/samphonenumber_textview"
                app:layout_constraintStart_toEndOf="@+id/country_textview" android:layout_marginStart="88dp"
                android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="@+id/guideline_profile"/>
        <TextView
                android:text="@string/string_samslackusername"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:id="@+id/samslack_textview"
                app:layout_constraintStart_toEndOf="@+id/country_textview" android:layout_marginStart="96dp"
                android:layout_marginTop="264dp" app:layout_constraintTop_toTopOf="@+id/guideline_profile"/>
        <TextView
                android:text="@string/string_samemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/samemail_textview2"
                app:layout_constraintStart_toEndOf="@+id/country_textview" android:layout_marginStart="16dp"
                android:layout_marginTop="132dp" app:layout_constraintTop_toTopOf="@+id/guideline_profile"/>


</androidx.constraintlayout.widget.ConstraintLayout>