<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_one" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="308dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.434" android:background="#FFC107"/>
    <Button
            android:text="@string/button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_two" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.433" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/button_one" android:background="#FFC107"/>
    <TextView
            android:text="@string/about_alc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toTopOf="@+id/button_one" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>